p2/conf/nginx/03-nginx1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  labels:
    app: nginx1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:latest
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html
        configMap:
          name: nginx-configmap1
          items:
          - key: index.html
            path: index.html
      - name: conf
        configMap:
          name: nginx-configmap1
          items:
          - key: default.conf
            path: default.conf
