p2/conf/nginx/03-nginx2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2 
  labels:
    app: nginx2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:latest
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html
        configMap:
          name: nginx-configmap2
          items:
          - key: index.html
            path: index.html
      - name: conf
        configMap:
          name: nginx-configmap2
          items:
          - key: default.conf
            path: default.conf
