p2/conf/nginx/03-nginx3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment3
  labels:
    app: nginx3

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      containers:
      - name: nginx3
        image: nginx:latest
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html
        configMap:
          name: nginx-configmap3
          items:
          - key: index.html
            path: index.html
      - name: conf
        configMap:
          name: nginx-configmap3
          items:
          - key: default.conf
            path: default.conf
