p2/conf/nginx/04-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1
            port:
              name: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx2-ingress
spec:
  rules:
  - host: "app2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx2
            port:
              name: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx3-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx3
            port:
              name: web
